--- a/.github/workflows/deploy-to-cpanel.yml
+++ b/.github/workflows/deploy-to-cpanel.yml
@@ -30,5 +30,5 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT }}
           local-dir: ./  # Diretório local para enviar (ou ./dist/ se você tiver uma build)
-          server-dir: /public_html/dev/  # Pasta no servidor cPanel
+          server-dir: /  # Pasta no servidor cPanel, está / pois o usuário FTP só tem acesso a essa pasta
           dangerous-clean-slate: true  # Limpa o diretório de destino antes do upload
