--- a/.github/workflows/deploy-to-cpanel.yml
+++ b/.github/workflows/deploy-to-cpanel.yml
@@ -33,7 +33,9 @@ jobs:
           port: ${{ secrets.FTP_PORT }}
           local-dir: ./ # Diretório local para enviar (ou ./dist/ se você tiver uma build)
           server-dir: / # Pasta raiz do public_html para a versão principal
-          dangerous-clean-slate: true # Limpa o diretório de destino antes do upload
+          dangerous-clean-slate: false # Não limpa o diretório de destino antes do upload
+          exclude: |
+            **/dev/** # Exclui a pasta dev do processo de limpeza e atualização
 
   deploy-dev:
     if: github.ref == 'refs/heads/dev'
